fix the problem of white space when the overflow is more than the main screen

--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,8 +1,10 @@
 .container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  overflow: auto;
 }
 
 .main {
-  height: 100vh;
+  height: 100%;
+  overflow: auto;
 }
